k8s-manifests/auth-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: auth-service
spec:
  selector:
    matchLabels:
      app: auth-db 
  serviceName: "auth-db"
  replicas: 2 
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: auth-db
        image: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: auth-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: auth-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: auth-service
spec:
  clusterIP: None 
  selector:
    app: auth-db
  ports:
    - port: 8085
      targetPort: 5432
