k8s-manifests/auth-psql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-psql
  namespace: auth-service
spec:
  selector:
    matchLabels:
      app: auth-psql 
  serviceName: "auth-psql"
  replicas: 3 
  template:
    metadata:
      labels:
        app: auth-psql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: auth-psql
        image: postgres
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: auth-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: auth-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: auth-psql
  namespace: auth-service
spec:
  clusterIP: None 
  selector:
    app: auth-psql
  ports:
    - port: 5432
