k8s-manifests/billing-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: billing-db
  namespace: billing-service
spec:
  selector:
    matchLabels:
      app: billing-db 
  serviceName: "billing-db"
  template:
    metadata:
      labels:
        app: billing-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: billing-db
        image: mongo
        ports:
        - containerPort: 27017
          name: web
        volumeMounts:
        - name: billing-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: billing-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: billing-db
  namespace: billing-service
spec:
  clusterIP: None 
  selector:
    app: billing-db
  ports:
    - port: 8085
      targetPort: 27017
