k8s-manifests/billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  billing-service
  namespace: billing-service
  labels:
    app:  billing-service
spec:
  selector:
    matchLabels:
      app: billing-service
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  billing-service
    spec:
      containers:
      - name:  workeo/billing-service
        image:  workeo/billing-service:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /_status/heatlhz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/ready
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8000
          name:  billing-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  labels:
    app: billing-service
spec:
  type: ClusterIP
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      port: 8080        
      targetPort: 8000 
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: billing-service
spec:
  type: ExternalName
  externalName: billing-service.billing-service.svc.cluster.local  # Fully qualified name
