k8s-manifests/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak
        command:
          - "/opt/keycloak/bin/kc.sh"  # or the appropriate startup script
          - "start-dev" 
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        # livenessProbe:
        #   httpGet:
        #     path: /_status/health   # Corrected path
        #     port: 8080               # Corrected port
        #   initialDelaySeconds: 120   # Increased initial delay
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/ready    # Corrected path
        #     port: 8080              # Corrected port
        #   initialDelaySeconds: 120   # Increased initial delay
        #   timeoutSeconds: 2
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keycloak-config-volume
          mountPath: /opt/keycloak/data/import
          subPath: import
      volumes:
      - name: keycloak-config-volume
        configMap:
          name: keycloak-config
        
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth-service
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8080
  selector:
    app: keycloak
