k8s-manifests/subscription-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: subscription-db
  namespace: subscription-service
spec:
  selector:
    matchLabels:
      app: subscription-db 
  serviceName: "subscription-db"
  replicas: 2
  template:
    metadata:
      labels:
        app: subscription-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: subscription-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: subscription-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: subscription-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: subscription-db
  namespace: subscription-service
spec:
  clusterIP: None 
  selector:
    app: subscription-db
  ports:
    - port: 8085
      targetPort: 5432
