k8s-manifests/subscription-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  subscription-service
  namespace: subscription-service
  labels:
    app:  subscription-service
spec:
  selector:
    matchLabels:
      app: subscription-service
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  subscription-service
    spec:
      containers:
      - name:  subscription-service
        image:  workeo/subscription-service:0.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /_status/heatlhz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/ready
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8080
          name:  subscription-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
  labels:
    app: subscription-service
spec:
  type: ClusterIP
  selector:
    app: subscription-service
  ports:
    - protocol: TCP
      port: 8080        
      targetPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
  namespace: subscription-service
spec:
  type: ExternalName
  externalName: subscription-service.subscription-service.svc.cluster.local  # Fully qualified name
